--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@fast-csv/parse": "^4.3.6",
     "@hamster-bot/eslint-config": "*",
     "@hamster-bot/prettier-config": "*",
+    "@hamster-bot/tsconfig": "^0.0.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.3",
     "@types/mocha": "^9.1.1",
