--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "exports": {
+    "types": "./dist/index.d.ts",
     "require": "./dist/index.js",
     "import": "./dist/index.js"
   },
@@ -22,10 +23,10 @@
     "README.md"
   ],
   "scripts": {
-    "build": "yarn build:esbuild",
-    "dev": "cross-env NODE_ENV=development yarn build:esbuild",
-    "build:esbuild": "node -r esbuild-register ./scripts/build.ts",
-    "fetch-data": "ts-node scripts/fetch-data.ts && prettier --write src/data.ts",
+    "build": "yarn tsup --minify",
+    "dev": "yarn tsup --sourcemap",
+    "tsup": "tsup src/index.ts --dts --format cjs,esm --clean",
+    "fetch-data": "tsx scripts/fetch-data.ts && prettier --write src/data.ts",
     "test": "yarn test:text",
     "test:text": "nyc --reporter=text mocha ./__tests__",
     "test:html": "nyc --reporter=html mocha ./__tests__",
@@ -63,19 +64,16 @@
     "chai": "^4.3.6",
     "chai-each": "^0.0.1",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.15.5",
-    "esbuild-plugin-yaml": "^0.0.1",
-    "esbuild-register": "^3.3.3",
     "eslint": "^8.22.0",
     "eslint-import-resolver-typescript": "^3.5.0",
     "fast-glob": "^3.2.11",
-    "js-yaml": "^4.1.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "tsup": "^8.0.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.2.2"
   },
   "packageManager": "yarn@3.2.1",
   "dependencies": {
