--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffxiv-textcommand-data",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Provide FFXIV Text Command Data from NPM Package",
   "keywords": [
     "ffxiv",
@@ -16,7 +16,7 @@
     "require": "./dist/index.js",
     "import": "./dist/index.js"
   },
-  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "LICENCE",
